<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/layout_toolbar"></include>


    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        app:columnCount="3"
        app:orientation="horizontal">


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/db_task_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/btn_top_5dp"
                android:drawableTop="@drawable/ic_dbrw"
                android:padding="@dimen/dimen_10"
                android:text="@string/db_task_text"
                android:textSize="@dimen/dimens_16sp" />

            <com.hqxh.fiamproperty.ui.widget.MaterialBadgeTextView
                android:id="@+id/badge_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginRight="25dp"
                android:background="@color/red"
                android:ellipsize="none"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </FrameLayout>


        <TextView
            android:id="@+id/yb_task_id"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_ybrw"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/yb_task_text"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />


        <TextView
            android:id="@+id/ccsq_text_id"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_ccsq"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/ccsq_text"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/cgsq_text_id"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_cgsq"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/cgsq_text"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/rwd_text_id"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_rwd"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="任务单"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/ht_text_id"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_ht"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/ht_text"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/fkys_text_id"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_fkys"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/fkys_text"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/xkjh_text_id"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_xkjh"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/xkjh_text"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/bx_text_id"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_bx"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/bx_text"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/cmgl_text_id"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_cmgl"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/cmgl_text"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <!--<TextView
            android:id="@+id/xmxs_text_id"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:background="@color/white"
            android:drawablePadding="@dimen/btn_top_5dp"
            android:drawableTop="@drawable/ic_bx"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:text="@string/xmxs_text"
            android:textSize="@dimen/dimens_16sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />-->


    </android.support.v7.widget.GridLayout>

</android.support.design.widget.CoordinatorLayout>
