<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/btn_top_5dp"
    android:background="@color/white"
    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/btn_top_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/btn_top_5dp">

            <TextView
                android:id="@+id/title1_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description1_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/description1_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/btn_top_5dp"
                android:hint="@string/have_not_data"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@mipmap/line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/btn_top_5dp">

            <TextView
                android:id="@+id/title2_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grlin1_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/grlin1_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/btn_top_5dp"
                android:hint="@string/have_notdata_hint"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@mipmap/line"></View>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/btn_top_5dp">

            <TextView
                android:id="@+id/title3_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measureunitid_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/measureunitid_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/btn_top_5dp"
                android:hint="@string/have_notdata_hint"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@mipmap/line"></View>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/btn_top_5dp">

            <TextView
                android:id="@+id/title4_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/qty_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/btn_top_5dp"
                android:hint="@string/have_notdata_hint"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>